--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "devDependencies": {
+    "@types/node": "^12.6.9",
+    "@types/react": "^16.8.24",
+    "typescript": "^3.5.3"
   }
 }
