--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Hermansen <hermansendesigns@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.3.3",
     "next": "^9.0.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1"
   },
   "scripts": {
     "dev": "next",
