--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.3.3",
     "next": "^9.0.3",
+    "next-images": "^1.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1"
