--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.4.1",
     "next": "^9.0.3",
     "next-images": "^1.1.2",
     "normalize.css": "^8.0.1",
@@ -20,6 +21,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "typescript": "^3.5.3"
