--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Hermansen <hermansendesigns@gmail.com>",
   "license": "MIT",
   "dependencies": {
-
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
     "next": "^9.0.3",
     "next-images": "^1.1.2",
@@ -17,7 +17,6 @@
     "react-material-ui-form-validator": "^2.0.9",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1"
-
   },
   "scripts": {
     "dev": "next",
