--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.8.6",
     "react-material-ui-form-validator": "^2.0.9",
     "react-redux": "^7.1.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "dev": "next",
@@ -25,8 +26,13 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "@types/material-ui": "^0.21.7",
+    "@types/next": "^8.0.6",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
+    "@types/styled-components": "^4.1.19",
+    "babel-plugin-styled-components": "^1.10.6",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.3"
   }
 }
