--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
+    "formik": "^1.5.8",
+    "formik-material-ui": "^0.0.22",
     "next": "^9.0.3",
     "next-images": "^1.1.2",
     "prop-types": "^15.7.2",
@@ -16,7 +18,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
-    "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.0.1",
     "styled-components": "^4.4.0",
     "webpack": "^4.41.0"
@@ -32,6 +33,7 @@
     "@types/next": "^8.0.6",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
+    "@types/yup": "^0.26.24",
     "babel-plugin-styled-components": "^1.10.6",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3"
