--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.0",
     "webpack": "^4.41.0"
   },
@@ -33,6 +38,8 @@
     "@types/next": "^8.0.6",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
+    "@types/react-redux": "^7.1.4",
+    "@types/redux-logger": "^3.0.7",
     "@types/yup": "^0.26.24",
     "babel-plugin-styled-components": "^1.10.6",
     "tslint": "^5.20.0",
