--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "formik-material-ui": "^0.0.22",
+    "js-cookie": "^2.2.1",
     "next": "^9.0.3",
     "next-images": "^1.1.2",
     "prop-types": "^15.7.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "@types/js-cookie": "^2.2.2",
     "@types/material-ui": "^0.21.7",
     "@types/next": "^8.0.6",
     "@types/node": "^12.7.5",
