--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
+    "core-js-pure": "^3.3.2",
     "formik": "^1.5.8",
     "formik-material-ui": "^0.0.22",
     "js-cookie": "^2.2.1",
@@ -26,6 +27,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.4.0",
     "webpack": "^4.41.0"
   },
