--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "react-stripe-elements": "^5.0.1",
     "react-stripe-elements-universal": "^1.2.0-3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
