--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "react-stripe-elements": "^5.0.1",
+    "react-stripe-elements-universal": "^1.2.0-3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
@@ -41,6 +43,7 @@
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-redux": "^7.1.4",
+    "@types/react-stripe-elements": "^1.3.4",
     "@types/redux-logger": "^3.0.7",
     "@types/yup": "^0.26.24",
     "babel-plugin-styled-components": "^1.10.6",
